<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.robert.softwaredevelopmentproject.NewGameActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter new game name:"
            android:id="@+id/textView6"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fileNameId"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="21dp"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignStart="@+id/textView6"
            android:layout_alignRight="@+id/textView6"
            android:layout_alignEnd="@+id/textView6" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Continue"
            android:id="@+id/newGameContinueButton"
            android:layout_marginTop="26dp"
            android:onClick="continueToLoadout"
            android:layout_below="@+id/fileNameId"
            android:layout_alignLeft="@+id/newGameCancelButton"
            android:layout_alignStart="@+id/newGameCancelButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:id="@+id/newGameCancelButton"
            android:layout_below="@+id/newGameContinueButton"
            android:layout_centerHorizontal="true"
            android:onClick="cancelToMain" />
    </RelativeLayout>

</RelativeLayout>
