...
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start"
                android:id="@+id/startGameButton"
                android:onClick="startGameActivity" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
...
